[gd_scene load_steps=6 format=3 uid="uid://bl07530pf7uhq"]

[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="1_1hn2r"]
[ext_resource type="FontFile" uid="uid://cfqhh4yntr6j2" path="res://Facon.ttf" id="2_o77q1"]
[ext_resource type="Script" path="res://flicker.gd" id="3_x5ofj"]
[ext_resource type="FontFile" uid="uid://dc0g87d43xkdc" path="res://Trajan Pro Bold.ttf" id="5_kct5s"]

[sub_resource type="Environment" id="Environment_f8f6i"]
background_mode = 3
background_canvas_max_layer = 1
glow_enabled = true
glow_blend_mode = 0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hn2r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CanvasLayer"]
environment = SubResource("Environment_f8f6i")

[node name="G" type="Label" parent="CanvasLayer"]
self_modulate = Color(6, 1, 6, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = 20.0
offset_right = 118.0
offset_bottom = 320.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_o77q1")
theme_override_font_sizes/font_size = 300
text = "G
"
script = ExtResource("3_x5ofj")

[node name="Timer" type="Timer" parent="CanvasLayer/G"]
wait_time = 0.1
autostart = true

[node name="Play1" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 64.0
offset_right = 21.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
flat = true

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.0
offset_top = 56.0
offset_right = 307.0
offset_bottom = 256.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("5_kct5s")
theme_override_font_sizes/font_size = 200
text = "TANK"

[node name="Quit" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 157.0
offset_right = 21.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
flat = true

[node name="Level2" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 84.0
offset_right = 31.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 2"
flat = true

[node name="Level3" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 107.0
offset_right = 31.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 3"
flat = true

[node name="Settings" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 130.0
offset_right = 35.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
flat = true

[connection signal="timeout" from="CanvasLayer/G/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Play1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_button_quit"]
[connection signal="pressed" from="CanvasLayer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings" to="." method="_on_settings_pressed"]
